# SimulatedAnnealing

./: #hoc.pdf#  #runs.txt#  .gitignore  Cargo.toml  README.md  build.rs  newAll_150.txt  runs.txt
data/: #runs.txt#  .#runs.txt  all_150.txt  error.txt  error2.txt  result.txt  runs.txt  runs150.txt  runs40.txt  testRuns.txt
report/: #Report.log#  #Report.tex#  .#Report.tex  Report.aux  Report.bbl  Report.blg  Report.tex  citations.bib
src/: #lib.rs#  #main.cpp#  #reader.rs#  #sa.rs#  #threadspawninator.rs#  #tsp.rs#  .#lib.rs  .#reader.rs  .#sa.rs  city.rs  data.rs  lib.rs  main.rs  path.rs  reader.rs  sa.rs  testCases.rs  threadspawninator.rs  tsp.rs
tests/: #tests.rs#  .#tests.rs  tests.rs
