[package]
name = "simulated_annealing"
version = "0.1.0"
edition = "2021"
[dependencies]
sqlite = "0.30.4"
libm = "0.2.6"
rand = "0.8.5"
rand_distr = "0.4.3"
float-cmp = "0.9.0"
plotlib = "0.5.1"
num_cpus = "1.0"
itertools = "0.10.5"
clap = "4.1.9"
[dependencies.num-traits]
version = "0.2"
default-features = false
[profile.release]
panic = 'abort'
